--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <label for="view">Please enter a password</label>
                             <input autofocus class="form-control m-1 form-outline w-50 mx-auto jelszo"  type="password"
                                 name="jelszo" placeholder="Write here" >
-                            <button type="button" class="cardButtons submitButtons" name="ok" id="view">Submit</button>
+                            <button type="submit" class="cardButtons submitButtons" name="ok" id="view">Submit</button>
                         </div>
                     </form>
                 </div>
