--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                                 <label for="view">Please enter a password</label>
                                 <input autofocus class="form-control m-1 form-outline w-50 mx-auto jelszo"
                                     type="password" name="jelszo" placeholder="Write here">
-                                <button type="button" class="cardButtons submitButtons" name="ok"
-                                    id="view">Submit</button>
+                                <button onclick="openResume()" type="button" class="cardButtons submitButtons" name="ok"
+                                    id="view">Submit
+                                </button>
                             </div>
                         </form>
                     </div>
