--- a/Projects/MYownResume/resume.html
+++ b/Projects/MYownResume/resume.html
@@ -187,9 +187,11 @@
                             </li>
                           
                         </ul>
+                        <div class="downloadButton">
                         <button type="button" name="pdfResume" value="pdfResume" onclick="openPdf()">
                             Download resume
                         </button>
+                    </div>
                     </div>
                 </div>
             </div>
