--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                                 <label for="view">Please enter a password</label>
                                 <input autofocus class="form-control m-1 form-outline w-50 mx-auto jelszo"
                                     type="password" name="jelszo" placeholder="Write here">
-                                <button onclick="openResume()" type="button" class="cardButtons submitButtons" name="ok"
+                                <button onclick="openResume()" type="button" class="cardButtons submitButton" name="ok"
                                     id="view">Submit
                                 </button>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer bg-dark">
-                        <button type="button" class="btn btn-secondary cardButtons"
+                        <button type="button" class="btn btn-secondary cardButtons footerText"
                             data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
