--- a/index.html
+++ b/index.html
@@ -228,12 +228,34 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="image-container">
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/galery.jpg" alt="Project 4">
+                        </div>
+                        <div class="project-gif">
+                            <img src="images/Compressedgif/galery.gif">
+                        </div>
+                        <h3>PHP Gallery</h3>
+                        <p>Language: <span class="flag">🇬🇧</span></p>
+                        <div class="buttonGroup">
+                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal4">
+                                More info...
+                            </button>
+                            <button class="cardButtons">
+                                <a href="http://chrisphp.42web.io/upload.php" target="_blank">Click here for project</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
 
         <!-- Project Modals Section -->
 
+<!-- Headstone Modal -->
         <div class="modal-container text-center">
             <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
@@ -277,7 +299,7 @@
                     </div>
                 </div>
             </div>
-
+<!-- Admin Modal -->
             <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
@@ -322,7 +344,7 @@
                 </div>
             </div>
 
-
+<!-- Qr Code Modal -->
             <div class="modal fade" id="projectModal3" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-frame modal-top" role="document">
@@ -365,7 +387,44 @@
                     </div>
                 </div>
             </div>
-
+<!-- PHP Gallery Modal -->
+            <div class="modal-container text-center">
+                <div class="modal fade" id="projectModal4" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="projectModalLabel">Project </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body bg-dark">
+                                <h3>
+                                    Short Description</h3>
+                                <p>This PHP project consists of two parts: the first part handles gallery creation and the second part manages image uploads to existing galleries. In the gallery creation section, it checks if a gallery name is provided, creates a new directory for the gallery if it doesn't already exist, and provides feedback on the success of the creation. In the image upload section, it allows users to select a gallery, upload multiple images, and validates that the uploaded files are in suitable formats (JPEG, PNG, or WebP).
+                                </p>
+                                <h3>Key features</h3>
+                                <ul>
+                                    <li>Efficient Gallery Creation
+                                    </li>
+                                    <li>Informative Feedback</li>
+                                    <li> User-Friendly Image Upload
+                                    </li>
+                                    <li>Responsive Design</li>
+                                </ul>
+                                <h3>Technologies used</h3>
+                                <div>
+                                    <img src="images/icons/icons8-html.svg" alt="html_icon">
+                                    <img src="images/icons/icons8-css.svg" alt="css_icon">
+                                    <img src="images/icons/icons8-bootstrap.svg" alt="bootstrap_icon">
+                                    <img src="images/icons/icons8-php.svg" alt="php_icon">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             <div class="container m-5 mb-lg-0 slide-in text-center mx-auto">
@@ -435,7 +494,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
 
 
         <div class="lowerWave">
@@ -480,8 +539,8 @@
                         <p class="animation mx-auto">Junior Frontend</p> fejlesztő aki
                         lelkesedik a webfejlesztésért, nyitott az új kihívásokra, nem utolsósorban pedig
                         hisz az élethosszig tartó tanulásban. Szívesen veszek részt felhasználóbarát és
-                        hatékony weboldalak készítésében. Amikor épp nem kódolok,
-                        leginkább olvasok, aktívan mozgok, és túrázok mindenfelé a nagy világban.</p>
+                        hatékony weboldalak készítésében. Ha épp nem kódolok,
+                         olvasok, aktívan mozgok, túrázok mindenfelé a nagy világban.</p>
                     </div>
                 </div>
 
@@ -524,7 +583,7 @@
                         <h3>Sírköves weboldal projekt</h3>
                         <p>Nyelv: <span class="flag">🇭🇺</span></p>
                         <div class="buttonGroup">
-                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal4">
+                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal5">
                                 Részletek...
                             </button>
                             <button class="cardButtons">
@@ -546,7 +605,7 @@
                         <h3>Admin táblázat projekt</h3>
                         <p>Nyelv: <span class="flag">🇭🇺</span></p>
                         <div class="buttonGroup">
-                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal5">
+                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal6">
                                 Részletek...
                             </button>
                             <button class="cardButtons">
@@ -570,11 +629,33 @@
                         <h3>Qr kód készítő</h3>
                         <p>Nyelv: <span class="flag">🇬🇧</span></p>
                         <div class="buttonGroup">
-                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal6">
+                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal7">
                                 Részletek...
                             </button>
                             <button class="cardButtons">
                                 <a href="https://krisztianqrcode.netlify.app/" target="_blank">Projekt
+                                    megtekintése</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="image-container">
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/galery.jpg" alt="Project 4">
+                        </div>
+                        <div class="project-gif">
+                            <img src="images/Compressedgif/galery.gif">
+                        </div>
+                        <h3>PHP galéria</h3>
+                        <p>Nyelv: <span class="flag">🇬🇧</span></p>
+                        <div class="buttonGroup">
+                            <button class="cardButtons" data-bs-toggle="modal" data-bs-target="#projectModal8">
+                                Részletek...
+                            </button>
+                            <button class="cardButtons">
+                                <a href="http://chrisphp.42web.io/upload.php" target="_blank">Projekt
                                     megtekintése</a>
                             </button>
                         </div>
@@ -587,7 +668,7 @@
 
 
         <div class="modal-container text-center">
-            <div class="modal fade" id="projectModal4" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+            <div class="modal fade" id="projectModal5" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -634,7 +715,7 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="projectModal5" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
+            <div class="modal fade" id="projectModal6" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -682,7 +763,7 @@
             </div>
 
 
-            <div class="modal fade" id="projectModal6" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+            <div class="modal fade" id="projectModal7" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-frame modal-top" role="document">
                     <div class="modal-content">
@@ -722,6 +803,39 @@
                 </div>
             </div>
 
+            <div class="modal fade" id="projectModal8" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg  modal-frame modal-top" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="projectModalLabel">Project </h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body bg-dark">
+                        <h3>Rövid leírás</h3>
+                        <p>Ez a PHP projekt két részből áll: az első rész a galéria létrehozását valósítja meg, míg a második rész azoknak a képeknek a feltöltését kezeli a létrehozott galériákba. A galéria létrehozás közben ellenőrzésre kerül, hogy van-e megadva galérianév, és létezik-e már, valamint rövid visszajelzést ad a létrehozás eredményéről. A képfeltöltés részben a felhasználók kiválaszthatnak egy galériát, több képet tölthetnek fel a megadott formátumok alapján (JPEG, PNG vagy WebP).</p>
+                        <h3>Főbb jellemzők</h3>
+                        <ul>
+                            <li> Egyszerű Galéria Létrehozás</li>
+                            <li>Felhasználóbarát Képfeltöltés</li>
+                            <li>Informatív Visszajelzés</li>
+                            <li>Reszponzív Design</li>
+                          
+                        </ul>
+                        <h3>Felhasznált Technológiák</h3>
+                        <div class="bg-dark">
+                            <img src="images/icons/icons8-html.svg" alt="html_icon">
+                            <img src="images/icons/icons8-css.svg" alt="css_icon">
+                            <img src="images/icons/icons8-bootstrap.svg" alt="bootstrap_icon">
+                            <img src="images/icons/icons8-php.svg" alt="php_icon">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezárás</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
             <div class="container m-5 mb-lg-0 slide-in text-center mx-auto">
