--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
                     </div>
                 </div>
             </div>
+
 <!-- Admin Modal -->
             <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
                 aria-hidden="true">
@@ -387,6 +388,7 @@
                     </div>
                 </div>
             </div>
+
 <!-- PHP Gallery Modal -->
             <div class="modal-container text-center">
                 <div class="modal fade" id="projectModal4" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
@@ -431,7 +433,7 @@
                 <div class="spacer">
                     <hr class="spacer-line">
                 </div>
-                <h2>Skills</h2>
+                <h2 class="m-5">Skills</h2>
                 <div id="skills">
                     <div class="row">
                         <div class="col-4 skill">
@@ -842,7 +844,7 @@
                 <div class="spacer">
                     <hr class="spacer-line">
                 </div>
-                <h2>Ismert technológiák</h2>
+                <h2 class="m-5">Ismert technológiák</h2>
                 <div id="skills">
                     <div class="row">
                         <div class="col-4 skill">
