--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="projects-section slide-in" id="projects">
             <h2>Projects I've Worked On</h2>
             <div class="project-container">
-                <div class="image-container">
+                <!-- <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
                             <img src="images/berenyi.png" alt="Project 1">
@@ -180,7 +180,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="image-container">
@@ -257,7 +257,7 @@
 
 <!-- Headstone Modal -->
         <div class="modal-container text-center">
-            <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+            <!-- <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 <!-- Admin Modal -->
             <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
@@ -574,7 +574,7 @@
         <div class="projects-section slide-in" id="projektek" data-lang="hu">
             <h2>Projektek</h2>
             <div class="project-container">
-                <div class="image-container">
+                <!-- <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
                             <img src="images/berenyi.png" alt="Project 1">
@@ -593,7 +593,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="image-container">
@@ -670,7 +670,7 @@
 
 
         <div class="modal-container text-center">
-            <div class="modal fade" id="projectModal5" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
+            <!-- <div class="modal fade" id="projectModal5" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg  modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -715,7 +715,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="modal fade" id="projectModal6" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label"
                 aria-hidden="true">
@@ -907,9 +907,6 @@
                 </div>
             </div>
         </div>
-
-
-
         <div class="lowerWave">
             <svg width="100%" height="10%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
                 class="transition duration-300 ease-in-out delay-150">
