--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 More info...
                             </button>
                             <button class="cardButtons">
-                                <a href="http://passwordtest.kesug.com/" target="_blank">Click here for project</a>
+                                <a href="Projects/PasswordGenerator/index.html" target="_blank">Click here for project</a>
                             </button>
                         </div>
                     </div>
@@ -594,7 +594,7 @@
                                 Részletek...
                             </button>
                             <button class="cardButtons">
-                                <a href="http://passwordtest.kesug.com/" target="_blank">Projekt megtekintése</a>
+                                <a href="Projects/PasswordGenerator/index.html" target="_blank">Projekt megtekintése</a>
                             </button>
                         </div>
                     </div>
