--- a/index.html
+++ b/index.html
@@ -115,21 +115,18 @@
         <main class="container first_section">
             <div class="content-wrapper text-center">
                 <div class="left-side-header ">
-                    <img src="images/profile.jpg" alt="Krisztian Czinege" class="aboutMePicture">
+                    <img src="images/profile_Img.jpg" alt="Krisztian_Czinege" class="aboutMePicture">
                 </div>
                 <div class="text-center right-side-header">
                     <div class="right-hero">
                         <h1 class="title display-4">Hi there! my name is <p>Chris</p>
                         </h1>
                         <p>
-                            I'm a driven
-                        <p class="animation mx-auto">Junior Frontend</p> developer who is
-                        enthusiastic
-                        about web development and
-                        open-minded to new challenges and not least, committed to lifelong learning. I take
-                        pleasure in
-                        crafting user-friendly and efficient websites. When I'm not immersed in coding, I enjoy
-                        reading, staying active, and hiking in nature all around the world.
+                            I'm a dedicated
+                        <p class="animation mx-auto">Junior Frontend</p> developer with a strong passion for web
+                        development. I approach new challenges with an open mind and am committed to lifelong learning.
+                        Outside of coding, I indulge in reading, staying active, and exploring nature through hiking
+                        worldwide.
                         </p>
                     </div>
                 </div>
@@ -163,7 +160,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/passwordBg.jpg" alt="Project 1">
+                            <img src="images/CardBackGround/passwordBg.jpg" alt="Project 1">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/passwordGenerator.gif">
@@ -175,7 +172,8 @@
                                 More info...
                             </button>
                             <button class="cardButtons">
-                                <a href="Projects/PasswordGenerator/index.html" target="_blank">Click here for project</a>
+                                <a href="Projects/PasswordGenerator/index.html" target="_blank">Click here for
+                                    project</a>
                             </button>
                         </div>
                     </div>
@@ -185,7 +183,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/admin.png" alt="Project 2">
+                            <img src="images/CardBackGround/admin.png" alt="Project 2">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/AdminT.gif">
@@ -209,7 +207,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/qrgenerator.png" alt="Project 3">
+                            <img src="images/CardBackGround/qrgenerator.png" alt="Project 3">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/AngularProjectComp.gif">
@@ -231,7 +229,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/galery.jpg" alt="Project 4">
+                            <img src="images/CardBackGround/galery.jpg" alt="Project 4">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/galery.gif">
@@ -534,7 +532,7 @@
         <main class="container first_section">
             <div class="content-wrapper text-center">
                 <div class="left-side-header ">
-                    <img src="images/profile.jpg" alt="Krisztian Czinege" class="aboutMePicture">
+                    <img src="images/profile_Img.jpg" alt="Krisztian Czinege" class="aboutMePicture">
                 </div>
                 <div class="text-center right-side-header">
                     <div class="right-hero">
@@ -543,12 +541,18 @@
                         </h1>
                         <p>
                             Egy elkötelezett
-                        <p class="animation mx-auto">Junior Frontend</p> fejlesztő aki
-                        lelkesedik a webfejlesztésért, nyitott az új kihívásokra, nem utolsósorban pedig
-                        hisz az élethosszig tartó tanulásban. Szívesen veszek részt felhasználóbarát és
-                        hatékony weboldalak készítésében. Ha épp nem kódolok,
-                        olvasok, aktívan mozgok, túrázok mindenfelé a nagy világban.</p>
+                        <p class="animation mx-auto">Junior Frontend</p> fejlesztő aki nyitott az új kihívásokra,
+                        és elkötelezett a folyamatos tanulás mellett. Ha épp nem kódolok,
+                        akkor olvasok, aktívan mozgok, túrázok mindenfelé.</p>
                     </div>
+
+                    Szia! A nevem <p>Chris</p>.</h1>
+
+                    <p>Elkötelezett
+                    <p class="animation mx-auto">Junior Frontend</p> fejlesztő vagyok, erős szenvedéllyel a
+                    webfejlesztés iránt. Új kihívásokhoz nyitott szemmel állok, és elkötelezett vagyok a folyamatos
+                    tanulás mellett. A kódoláson kívül olvasással, aktív életmóddal és világszerte történő túrázással
+                    foglalkozom.
                 </div>
 
             </div>
@@ -582,7 +586,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/passwordBg.jpg" alt="Project 1">
+                            <img src="images/CardBackGround/passwordBg.jpg" alt="Project 1">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/passwordGenerator.gif">
@@ -604,7 +608,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/admin.png" alt="Project 2">
+                            <img src="images/CardBackGround/admin.png" alt="Project 2">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/AdminT.gif">
@@ -628,7 +632,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/qrgenerator.png" alt="Project 3">
+                            <img src="images/CardBackGround/qrgenerator.png" alt="Project 3">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/AngularProjectComp.gif">
@@ -650,7 +654,7 @@
                 <div class="image-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/galery.jpg" alt="Project 4">
+                            <img src="images/CardBackGround/galery.jpg" alt="Project 4">
                         </div>
                         <div class="project-gif">
                             <img src="images/Compressedgif/galery.gif">
