--- a/index.html
+++ b/index.html
@@ -537,22 +537,15 @@
                 <div class="text-center right-side-header">
                     <div class="right-hero">
                         <h1 class="title display-4">Üdv az oldalamon,
-                            <p>Krisztián vagyok!</p>
+
                         </h1>
+                        <h2>Krisztián vagyok!</h2>
                         <p>
                             Egy elkötelezett
                         <p class="animation mx-auto">Junior Frontend</p> fejlesztő aki nyitott az új kihívásokra,
                         és elkötelezett a folyamatos tanulás mellett. Ha épp nem kódolok,
                         akkor olvasok, aktívan mozgok, túrázok mindenfelé.</p>
                     </div>
-
-                    Szia! A nevem <p>Chris</p>.</h1>
-
-                    <p>Elkötelezett
-                    <p class="animation mx-auto">Junior Frontend</p> fejlesztő vagyok, erős szenvedéllyel a
-                    webfejlesztés iránt. Új kihívásokhoz nyitott szemmel állok, és elkötelezett vagyok a folyamatos
-                    tanulás mellett. A kódoláson kívül olvasással, aktív életmóddal és világszerte történő túrázással
-                    foglalkozom.
                 </div>
 
             </div>
